# CloudGuard

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  aws_scan_results.json  implementation_plan.md  project_spec.md  pyproject.toml  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python-publish.yml  python-tests.yml  scan-test.yml
docs/: README.md  quickstart.md
examples/: config.yml
scripts/: create_placeholder_images.py
src/cloudguard/: __init__.py  __main__.py  cli.py
src/cloudguard/cli/: __init__.py  aws.py  azure.py  main.py
src/cloudguard/core/: __init__.py  findings.py  reporting.py  scanner.py
src/cloudguard/frameworks/: __init__.py  cis.py  cwe.py  mapping.py  mitre.py
src/cloudguard/providers/: __init__.py  base.py
src/cloudguard/providers/aws/: __init__.py  iam.py  main.py  provider.py  registry.py  s3.py  scanner.py
src/cloudguard/providers/aws/services/: __init__.py  base.py  ec2.py  iam.py  s3.py
src/cloudguard/providers/azure/: __init__.py  main.py  provider.py  registry.py
src/cloudguard/providers/azure/services/: base.py  keyvault.py  storage.py
src/cloudguard/utils/: __init__.py  config.py  logger.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_aws_scanner.py  test_azure_scanner.py  test_core.py
