[tool.poetry]
name = "cloudguard"
version = "0.1.0"
description = "Automated Vulnerability Scanner for Cloud Services"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/yourusername/cloudguard"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^1.0.0"
pyyaml = "^6.0"
click = "^8.1.3"
rich = "^13.3.5"
aiohttp = "^3.8.4"
aiofiles = "^23.1.0"
tqdm = "^4.65.0"
dataclasses-json = "^0.5.7"
jinja2 = "^3.1.2"
marshmallow = "^3.19.0"
pydantic = "^2.0.0"
boto3 = "^1.26.0"
boto3-stubs = "^1.26.0"
azure-identity = "^1.12.0"
azure-mgmt-storage = "^20.0.0"
azure-mgmt-resource = "^21.1.0"
azure-mgmt-compute = "^29.0.0"
azure-mgmt-network = "^22.0.0"
azure-mgmt-keyvault = "^10.1.0"
azure-mgmt-sql = "^3.0.1"
azure-mgmt-apimanagement = "^3.0.0"
azure-mgmt-authorization = "^2.0.0"
# mitre-attack-navigator = "^1.0.0"  # Removed due to installation issues
# cwe-database = "^1.1.0"  # Removed due to installation issues

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.1.0"
pytest-mock = "^3.10.0"
moto = "^4.1.0"
responses = "^0.23.1"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"
pre-commit = "^3.3.1"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry.scripts]
cloudguard = "cloudguard.cli:main"

[tool.black]
line-length = 100
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--cov=cloudguard --cov-report=xml --cov-report=term-missing -v"

[tool.coverage.run]
source = ["cloudguard"]
omit = ["tests/*", "examples/*"] 